# exercises

./: .gitignore  README.md
advent_of_code/2025/: .gitignore
advent_of_code/day1/: README.md  day1  day1.cpp
advent_of_code/day2/: README.md  day2
dstructs/: main.go
euler project/: CMakeLists.txt  build.ps1  problem_001.cpp  problem_002.cpp  problem_003.cpp  problem_004.cpp  problem_005.cpp  problem_006.cpp  problem_007.cpp  problem_008.cpp  problem_009.cpp  problem_1.cpp  problem_2.cpp
euler_project/01/: main.go
euler_project/03/: go.mod
euler_project/04/: go.mod
euler_project/07/: problem.txt
euler_project/08/: main.go
euler_project/09/: main.go
euler_project/10/: main.go
euler_project/11/: go.mod  main.go
euler_project/12/: main.go  problem.txt
euler_project/14/: main.go  problem.txt
euler_project/15/: main.go  problem.txt
euler_project/16/: main.go  problem.txt
euler_project/17/: main.go  problem.txt
euler_project/18/: main.go  problem
euler_project/19/: main.go
euler_project/20/: main.go  problem
euler_project/21/: main.go  problem
euler_project/22/: main.go  problem
euler_project/23/: main.go  problem
euler_project/24/: main.go  problem
euler_project/25/: main.go  problem
euler_project/26/: main.go  problem
euler_project/27/: main.go  problem
euler_project/28/: main.go  problem
euler_project/29/: main.go  problem
euler_project/3/: main.go
euler_project/30/: main.go  problem
euler_project/31/: main.go
euler_project/4/: main.go
euler_project/5/: go.mod  (+1 more)
exercism/: README.md
upordownstack/: main.go
(+256 files in other folders)
